# T2K-HAT-DAQ-Reader

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  daq_readerConfig.cmake.in  gitlab-ci.yml  this_daq.sh.in
app/: CMakeLists.txt  Converter.cxx  Monitor.cxx
script/: converter.py
src/: CMakeLists.txt  DAQ.cxx  DAQ.h  EventDisplay.cxx  EventDisplay.hxx  Interface.cxx  Interface.hxx  InterfaceAqs.cxx  InterfaceAqs.hxx  InterfaceBase.cxx  InterfaceBase.hxx  InterfaceFactory.hxx  InterfaceMidas.cxx  InterfaceMidas.hxx  InterfaceRoot.cxx  InterfaceRoot.hxx  Mapping.cxx  Mapping.h  Output.cxx  Output.hxx  SetT2KStyle.hxx  T2KConstants.h.in  datum_decoder.cxx  datum_decoder.h  fdecoder.h  frame.c  frame.h  platform_spec.h
src/DAQ/: detector2fec.txt  fec2daq.txt
src/LinkDef/: CCoreLinkDef.h
src/Mapping/: ChipA.txt  ChipB.txt  ChipC.txt  ChipD.txt  reverseMap.txt
